# kubepp

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
.github/workflows/: build-and-test.yaml  release.yaml
src/: KubeppApp.cpp  KubeppApp.h  KubernetesClient.cpp  KubernetesClient.h  Query.cpp  Query.h  ResourceDescription.cpp  ResourceDescription.h  cjson.cpp  cjson.h  json.hpp  json_fwd.hpp  main.cpp
src/apps/: CustomResourceApp.h  CustomResourceDefinitionsApp.h  EventsApp.h  ExportApp.h  LogsApp.h  NodesApp.h  PodApp.h  WorkloadsApp.h
tests/: TestKubeppApp.cpp
